upgrade to mirror last version of Valhalla